tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/bool_addition.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
const x:bool = true + false

